tests/baselines/reference/parserIndexMemberDeclaration8.errors.txt
==== tests/cases/compiler/parserIndexMemberDeclaration8.ts (1 errors) ====
    class C {
       private [x: string]: string;
       ~~~~~~~
!!! parserIndexMemberDeclaration8.ts(2,4): error TS1055: Modifiers cannot appear here.
    }